changes related to pointer-events

--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -401,6 +401,10 @@
 		position: relative;
 		overflow: hidden;
 		display: inline-block;
+
+		span {
+			pointer-events: none;
+		}
 	}
 
 	&__inputImageSelector input[type="file"] {
