--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,12 +5,12 @@
 $font1: "Montserrat", sans-serif;
 
 // Colors
-$color0: #ffffff;
-$color1: #e56b9f;
-$color2: #2e2d50;
-$color3: #ec743a;
-$color4: #faf3e3;
-$color5: #000000;
-$color6: #474663;
-$color7: #58b12e;
-$color8: #405068;
+$color0: var(--color0);
+$color1: var(--color1);
+$color2: var(--color2);
+$color3: var(--color3);
+$color4: var(--color4);
+$color5: var(--color5);
+$color6: var(--color6);
+$color7: var(--color7);
+$color8: var(--color8);
