--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,18 @@ a {
 	text-decoration: none;
 }
 
+:root {
+	--color0: #ffffff;
+	--color1: #e56b9f;
+	--color2: #2e2d50;
+	--color3: #ec743a;
+	--color4: #faf3e3;
+	--color5: #000000;
+	--color6: #474663;
+	--color7: #58b12e;
+	--color8: #405068;
+}
+
 * {
 	box-sizing: border-box;
 } /*# sourceMappingURL=globals.css.map */
