--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -14,6 +14,15 @@
 	transition: all 300ms ease;
 	padding-bottom: 170px;
 	scroll-behavior: smooth;
+	overscroll-behavior: contain;
+
+	&__initLoader{
+		width: 100%;
+		height: 300px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 
 	&__topbar {
 		display: flex;
@@ -194,7 +203,7 @@
 		font-size: 0.8rem;
 		border: 1px solid $color4;
 		color: $color4;
-		cursor: none;
+		cursor: pointer;
 		user-select: none;
 		white-space: nowrap;
 		margin-right: 5px;
@@ -232,7 +241,7 @@
 		height: calc(100% - 112px);
 		backdrop-filter: blur(1.5px);
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 		flex-direction: column;
 	}
 
@@ -384,7 +393,7 @@
 		border-left: 10px solid transparent;
 		border-right: 10px solid transparent;
 		border-top: 10px solid $color0;
-		margin-right: 77%;
+		margin-left: 45px;
 	}
 
 	&__input {
@@ -477,10 +486,8 @@
 		width: 90%;
 		color: $color0;
 		padding-top: 2px;
-		padding-left: 20px;
 		font-weight: 500;
 		word-wrap: break-word;
-		word-break: break-all;
 		overflow-wrap: break-word;
 		&::placeholder {
 			color: $color0;
@@ -520,6 +527,7 @@
 		padding-left: 10px;
 		padding-right: 10px;
 		transition: all 600ms ease;
+		overscroll-behavior: contain;
 	}
 
 	&__receivedMsgContainer {
@@ -620,5 +628,33 @@
 		opacity: 0;
 		width: 100%;
 		height: 100%;
+	}
+}
+
+
+
+@media only screen and (min-width: 768px) {
+
+	.chatContainer {
+
+		&__topbar{
+			margin-top: 20px;
+		}
+
+		&__receivedMsgContainer {
+			max-width: 50%
+		}
+
+		&__sentMsgContainer {
+			max-width: 50%
+		}
+
+		&__input {
+			justify-content: flex-start;
+			
+			div:nth-child(3) {
+				width: 86%;
+			}
+		}
 	}
 }
