--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -238,7 +238,7 @@
 		top: 0;
 		left: 0;
 		width: 100vw;
-		height: calc(100% - 112px);
+		height: 100%;
 		backdrop-filter: blur(1.5px);
 		display: flex;
 		align-items: flex-start;
