--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -238,7 +238,8 @@
 		top: 0;
 		left: 0;
 		width: 100vw;
-		height: 100%;
+		height: 99%;
+		z-index: 99;
 		backdrop-filter: blur(1.5px);
 		display: flex;
 		align-items: flex-start;
