--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -218,6 +218,7 @@
 		bottom: 0;
 		width: 50px;
 		cursor: pointer;
+		background-color: $color6;
 		box-shadow: 0px 4px 34px 5px rgba(255, 255, 255, 0.65);
 	}
 
