--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -223,17 +223,19 @@
 	}
 
 	&__smartReplyMenu{
-		position: sticky;
-		background: var(--color0);
+		position: absolute;
+		width: 96%;
+		margin: auto;
+		bottom: 120px;
+		background: $color0;
 		border-radius: 2px;
 		padding: 10px;
 		display: block;
-		bottom: -47px;
+		right: 2%;
+		bottom: 120px;
 		z-index: 999;
 		height: 200px;
 		overflow-y: scroll;
-		width: 96%;
-		left: 2%;
 		animation: heightSmooth 300ms ease-in-out;
 	}
 
@@ -703,11 +705,7 @@
 
 		&__smartReplyMenu{
 			width: 380px;
-			position: sticky;
-			right: unset;
-			bottom: -47px;
-			left: calc(100% - 393px);
-			
+			right: 20px;
 		}
 
 		&__rulesUpArrow {
