--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: "Montserrat", sans-serif;
-	overscroll-behavior: contain;
 }
 
 a {
@@ -92,9 +91,17 @@ a {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }	
 
+.privacyPolicy{
+	padding: 50px;
+}
+
 @media only screen and (max-width: 768px) {
 	.watermarked::before {
 		font-size: 10px;
 		line-height: 25px;
+	}
+
+	.privacyPolicy{
+		padding: 15px;
 	}
 }
