--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,22 +1,40 @@
 @import "./variables";
 @import "./animations";
 
+.footerContainer {
+	height: 100px;
+	background-color: $color6;
+
+	&_container {
+		max-width: 1500px;
+		margin: auto;
+		color: $color0;
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		height: 100%;
+		a {
+			margin-right: 20px;
+		}
+	}
+}
+
 .mainContainer {
-	width: 100vw;
-	//height: 100vh;
+	max-width: 1500px;
+	height: 97vh;
 	display: flex;
 	justify-content: center;
 	margin: auto;
 	font-family: $font1;
 	transition: all 400ms ease;
 
-	&_features{
+	&_features {
 		display: flex;
 		margin-top: 40px;
 		flex-wrap: wrap;
 	}
 
-	&_featureItem{
+	&_featureItem {
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
@@ -25,7 +43,7 @@
 		margin-bottom: 18px;
 		width: 300px;
 		color: $color2;
-		div{
+		div {
 			margin-left: 20px;
 			width: 75%;
 		}
@@ -36,7 +54,7 @@
 		padding: 50px;
 		box-sizing: border-box;
 		position: relative;
-		padding-left: 130px;
+		//padding-left: 130px;
 	}
 
 	&_navScreen {
@@ -48,10 +66,7 @@
 		height: 100vh;
 		background-color: $color2;
 		animation: swipeFromLeft 300ms ease-in-out;
-
-		display: flex;
-		justify-content: flex-end;
-		align-items: flex-start;
+		padding-top: 150px;
 	}
 
 	&__navMenu {
@@ -84,11 +99,15 @@
 		width: 50%;
 		padding: 50px;
 		box-sizing: border-box;
-		background-color: $color4;
+		background: linear-gradient(180deg, #faf3e3 0%, rgba(255, 255, 255, 0) 75.57%);
 	}
 
 	&_siteLogoNavBar {
-		width: 100%;
+		padding-left: 50px;
+		padding-right: 50px;
+		margin: auto;
+		margin-top: 25px;
+		max-width: 1500px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -211,6 +230,7 @@
 
 		div {
 			transition: all 300ms ease;
+			margin-left: 40px;
 		}
 		div:hover {
 			transform: scale(1.1);
@@ -245,9 +265,20 @@
 }
 
 @media only screen and (max-width: 768px) {
+	.footerContainer {
+		height: 50px;
+		margin-bottom: 10px;
+
+		&_container {
+			justify-content: center;
+			font-size: 14px;
+		}
+	}
+
 	.mainContainer {
 		flex-direction: column;
 		justify-content: flex-start;
+		height: max-content;
 
 		&_leftSection {
 			width: 100%;
@@ -317,6 +348,21 @@
 					opacity: 0.5;
 					cursor: pointer;
 				}
+			}
+		}
+
+		&_featureItem {
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			font-size: 0.8em;
+			font-weight: 400;
+			margin-bottom: 8px;
+			width: 300px;
+			color: $color2;
+			div {
+				margin-left: 20px;
+				width: 75%;
 			}
 		}
 
