--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,6 +2,10 @@
 @import "./animations";
 
 .footerContainer {
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
 	height: 100px;
 	background-color: $color6;
 
@@ -20,6 +24,10 @@
 }
 
 .mainContainer {
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
 	max-width: 1500px;
 	height: 97vh;
 	display: flex;
