--- a/styles/Blog.module.scss
+++ b/styles/Blog.module.scss
@@ -368,4 +368,15 @@
 			font-size: 1.1rem;
 		}
 	}
+
+	.blogCard{
+		&__title{
+			line-height: 1.1rem;
+		}
+
+		&__subtitle{
+			margin-top: 8px;
+			line-height: 0.9rem;
+		}
+	}
 }
