added Wishes to site

--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -75,3 +75,12 @@
 		font-weight: 700;
 	}
 }
+
+@keyframes openclose {
+    0%{
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
