--- a/styles/Blog.module.scss
+++ b/styles/Blog.module.scss
@@ -271,6 +271,120 @@
 	}
 }
 
+.wishes{
+    width: 100%;
+    &__wishCategories{
+        width: 100%;
+        padding: 20px;
+        border-radius: 4px;
+    }
+
+    &__wishCategoriesText{
+        display: flex;
+        justify-content: space-between;
+        div:nth-child(1){
+            font-size: 1.4rem;
+            color: $color2;
+            font-weight: 600;
+        }
+        div:nth-child(2) {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            &:hover{
+                color: $color1;
+            }
+        }
+    }
+
+    &__scrollBox {
+        display: flex;
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    &__scrollBoxItems{
+        display: flex;
+        width: 100%;
+        border-top: 2px solid $color1;
+        border-bottom: 2px solid $color1;
+        overflow-x: scroll;
+        height: max-content;
+    }
+
+    &__scrollBoxLeft {
+        height: 64px;
+        width: 64px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid $color5;
+        cursor: pointer;
+        &:hover {
+            opacity: 0.5;
+        }
+    }
+    
+    &__scrollBoxItem{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-weight: 500;
+        height: 60px;
+        white-space: nowrap;
+        cursor: pointer;
+        &:hover{
+            opacity: 0.7;
+        }
+    }
+
+    &__scrollBoxRight {
+        height: 64px;
+        width: 64px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid $color5;
+        cursor: pointer;
+        &:hover {
+            opacity: 0.5;
+        }
+    }
+
+    &__templatesBox{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+        flex-wrap: wrap;
+    }
+
+    &__template{
+        border: 1px solid $color1;
+        border-radius: 8px;
+        display: block;
+        width: 250px;
+        transition: all 300ms ease;
+        cursor: pointer;
+        &:hover{
+            transform: scale(1.1);
+        }
+        div:nth-child(1) {
+            height: 150px;
+            img {
+                width: 100%;
+                border-radius: 4px;
+            }
+        }
+        div:nth-child(2){
+            padding: 10px;
+            font-weight: 500;
+            height: 70px;
+        }
+    }
+}
+
 @media only screen and (max-width: 768px) {
 	.blogHome {
 
@@ -284,6 +398,15 @@
 			width: 95%;
 			margin: auto;
 		}
+
+        &__title {
+            font-size: 1.3rem;
+            margin-top: 20px;
+        }
+
+        &__subtitleContainer {
+            font-size: .7rem;
+        }
 	}
 	.blogContainer {
 		display: flex;
@@ -381,4 +504,75 @@
 			line-height: 0.9rem;
 		}
 	}
+
+    .wishes {
+        &__wishCategories {
+            width: 100%;
+            padding: 15px;
+        }
+    
+        &__wishCategoriesText {
+    
+            div:nth-child(1) {
+                font-size: 1.1rem;
+            }
+    
+            div:nth-child(2) {
+                font-size: .9rem;
+            }
+        }
+
+        &__wishCategoriesSubText{
+            font-size: .9rem;
+        }
+        
+        &__scrollBoxLeft {
+            height: 44px;
+            width: 44px;
+        }
+
+        &__scrollBoxItem {
+            height: 40px;
+            font-size: .8rem;
+            width: 100%;
+        }
+
+        &__scrollBoxRight {
+            height: 44px;
+            width: 44px;
+        }
+
+        &__templatesBox {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+
+        &__template {
+            border: 1px solid $color1;
+            margin: auto;
+            width: 100%;
+            margin-bottom: 15px;
+            background: white;
+            &:hover{
+                transform: unset;
+            }
+
+            div:nth-child(1) {
+                width: 100%;
+                height: 200px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 4px;
+                }
+            }
+        
+            div:nth-child(2) {
+                padding: 10px;
+                height: 60px;
+                font-size: .8rem;
+            }
+        }
+    }
 }
