--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -29,7 +29,6 @@
 		text-decoration: none;
 	}
 	max-width: 1500px;
-	height: 97vh;
 	display: flex;
 	justify-content: center;
 	margin: auto;
@@ -63,6 +62,7 @@
 		box-sizing: border-box;
 		position: relative;
 		//padding-left: 130px;
+        animation: openclose 5s ease;
 	}
 
 	&_navScreen {
@@ -87,10 +87,9 @@
 	}
 
 	&__navMenuItem {
-		font-size: 1.4rem;
+		font-size: 1rem;
 		height: 50px;
-		font-weight: 600;
-		color: $color0;
+		font-weight: 500;
 		border-right: 5px solid $color0;
 		padding-right: 20px;
 		display: flex;
@@ -169,9 +168,14 @@
 		}
 	}
 
+    &_tagLineText{
+        height: 100px;
+    }
+
 	&_tagLine {
-		margin-top: 140px;
-		font-size: 3rem;
+		margin-top: 70px;
+		font-size: 2rem;
+        line-height: 2.5rem;
 		font-weight: 500;
 		color: $color2;
 		position: relative;
@@ -212,15 +216,15 @@
 		button {
 			all: unset;
 			width: max-content;
-			font-size: 0.4em;
+			font-size: 1rem;
 			padding: 10px 20px 10px 20px;
+            width: 200px;
 			background-color: $color1;
 			color: $color0;
 			border-radius: 10px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			margin-top: 10px;
 			margin-right: 10px;
 			&:hover {
 				opacity: 0.8;
@@ -241,9 +245,7 @@
 			margin-left: 40px;
 		}
 		div:hover {
-			transform: scale(1.1);
 			color: $color1;
-			font-weight: 500;
 		}
 	}
 
@@ -308,9 +310,14 @@
 			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #faf3e3 75.57%);
 		}
 
+        &_tagLineText{
+            height: 120px;
+            text-align: center;
+        }
+
 		&_tagLine {
 			font-size: 1.8rem;
-			margin-top: 80px;
+			margin-top: 60px;
 
 			&_poly1 {
 				position: absolute;
@@ -344,6 +351,8 @@
 
 		&_tagLineButtonsContainer {
 			margin-bottom: 40px;
+            display: flex;
+            justify-content: center;
 			button {
 				z-index: 199;
 				margin-top: 20px;
@@ -359,6 +368,10 @@
 			}
 		}
 
+        &__navMenuItem {
+            color: $color0;
+        }
+
 		&_featureItem {
 			display: flex;
 			justify-content: flex-start;
@@ -366,7 +379,8 @@
 			font-size: 0.8em;
 			font-weight: 400;
 			margin-bottom: 8px;
-			width: 300px;
+			width: 90%;
+            margin-left: auto;
 			color: $color2;
 			div {
 				margin-left: 20px;
