--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@100;300;400;500;600;700;800;900&display=swap");
 html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Montserrat", sans-serif;
+	font-family: "Montserrat Alternates", sans-serif;
 }
 
 a {
