--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,6 +108,7 @@ a {
 }
 
 
+
 canvas {
     width: 100%;
     height: 100%;
@@ -117,15 +118,43 @@ canvas {
 
 #canvasHolder{
     height: 200vh;
+    position: relative;
 }
 
 #img-sequencer{
     /* position: fixed; */
     top: 0;
     left: 0;
+    margin-top: -50px;
 }
 
 .section-1 {
     width: 100%;
     height: 100vh;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #faf3e3 75.57%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scrollmagic-pin-spacer{
+    margin-top: -100px;
+}
+
+.keepScrolling{
+    position: fixed;
+    bottom: 10px;
+    left: calc(50% - 63px);
+    font-size: 1.2rem;
+    color: white;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+}
+
+.keepScrolling-line{
+    border-bottom: 1px solid white;
+    margin-right: 10px;
+    padding-left: 50%;
 }
