--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -80,9 +80,16 @@
     0%{
         opacity: 0;
     }
-    100% {
+    50%{
+        opacity: 1;
+    }
+    75% {
+        opacity: .3;
+    }
+    100%{
         opacity: 1;
     }
 }
+
 
 
