--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,7 +117,6 @@ canvas {
 }
 
 #canvasHolder{
-    height: 200vh;
     position: relative;
 }
 
@@ -130,12 +129,30 @@ canvas {
 
 .section-1 {
     width: 100%;
-    height: 100vh;
+    height: 85vh;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #faf3e3 75.57%);
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.createLink{
+    position: absolute;
+    top: 10px;
+    width: 95%;
+    margin: auto;
+    height: 40px;
+    border-radius: 4px;
+    border: 2px solid;
+    display: flex;
+    font-weight: 500;
+    justify-content: center;
+    align-items: center;
+}
+
+.createLink:hover {
+    opacity: 0.5;
 }
 
 @keyframes fader {
@@ -153,42 +170,47 @@ canvas {
 }
 
 .profileIcon{
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     position: absolute;
     border-radius: 50%;
+    top: 20%;
 }
 
 .nameHolder{
     position: absolute;
     bottom: 96px;
     font-size: 1.5rem;
+    line-height: 1.5rem;
     /* transform: rotate(352deg); */
-    left: 40px;
+    
+    text-align: center;
 }
 
 .arrowDown{
     position: absolute;
-    bottom: 100px;
+    bottom: 250px;
     right: 10px;
-    width: 170px;
+    width: 190px;
     transform: rotate(100deg);
 }
 
 .scrollmagic-pin-spacer{
-    margin-top: -100px;
+    /* margin-top: -100px; */
+    min-height: unset !important;
 }
 
 .keepScrolling{
-    position: fixed;
-    bottom: 10px;
-    left: calc(50% - 63px);
-    font-size: 1.2rem;
-    color: white;
-    width: 200px;
+    position: absolute;
+    background: white;
+    width: 100%;
+    top: 0px;
+    color: black;
     display: flex;
+    justify-content: center;
     align-items: center;
-    font-weight: 500;
+    height: 60px;
+    
 }
 
 .keepScrolling-line{
@@ -201,7 +223,13 @@ canvas {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     font-size: 2rem;
+}
+
+.section-3 > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
