--- a/styles/Diwali.module.scss
+++ b/styles/Diwali.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@100;300;400;500;600;700;800;900&display=swap");
+
 .heroSection{
     margin: 0;
     padding: 0;
@@ -7,9 +9,10 @@
 
 .container{
     background:  url(../public/DiwaliBack.png) no-repeat fixed content-box;
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 700vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700vh;
+    font-family: "Montserrat Alternates", sans-serif;
 }
 
 .logo{
