--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -692,6 +692,8 @@
 
 .videoContainer {
     width: 100%;
+    object-fit: cover;
+    height: 35vh;
 }
 
 .videoOnOffLabel {
@@ -728,6 +730,8 @@
 
     .videoContainer{
         width: 50%;
+        object-fit: cover;
+        height: 65vh;
     }
 
 	.chatContainer {
