--- a/styles/live.module.scss
+++ b/styles/live.module.scss
@@ -305,9 +305,13 @@
 	&__newAd {
 		width: 100%;
 		height: 75px;
-		border: 2px solid $color2;
-		padding: 10px;
+        margin-bottom: 5px;
+		//border: 2px solid $color2;
 		font-size: 0.8rem;
+        img{
+            width: 100%;
+            max-height: 100%;
+        }
 	}
 
 	&__newTabs {
@@ -724,8 +728,6 @@
     margin: 12px;
 }
 
-
-
 @media only screen and (min-width: 768px) {
 
     .videoContainer{
@@ -781,3 +783,4 @@
 		}
 	}
 }
+
